# VulkanLibrary

./: .cursorignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CmakeLists.txt  README.md  build_vs2022_x64_Debug.bat  build_vs2022_x64_Release.bat
Dependence/: CMakeLists.txt
Dependence/lib/Debug/: glfw.lib
Dependence/lib/Release/: glfw.lib
cmake/: Dependencies.cmake
example/common/: glfwCallback.cpp  glfwCallback.h
example/hello_window/: CMakeLists.txt  main.cpp
matVkEngine/: .clang-format  README.md  matVkEngine.sln
matVkEngine/matVkEngine/: matVkEngine.vcxproj  matVkEngine.vcxproj.filters  test.cpp
matVkEngine/matVkEngine/common/: matVkEngineCommon.cpp  matVkEngineCommon.h  matVkEngineMesh.cpp  matVkEngineMesh.h
matVkEngine/matVkEngine/config/: matVkEngineConfig.h
matVkEngine/matVkEngine/core/: matVkEngineContext.cpp  matVkEngineContext.h
matVkEngine/matVkEngine/device/: matVkEngineCmdPool.cpp  matVkEngineCmdPool.h  matVkEngineLogicalDevice.cpp  matVkEngineLogicalDevice.h  matVkEnginePhysicalDevice.cpp  matVkEnginePhysicalDevice.h
matVkEngine/matVkEngine/pipeline/: matVkEngineFramebuffer.cpp  matVkEngineFramebuffer.h  matVkEngineRenderPass.cpp  matVkEngineRenderPass.h  matVkEngineRenderPipeline.cpp  matVkEngineRenderPipeline.h
matVkEngine/matVkEngine/resource/: matVkEngineBuffer.cpp  matVkEngineBuffer.h  matVkEngineImage.cpp  matVkEngineImage.h  matVkEngineTexture.cpp  matVkEngineTexture.h
matVkEngine/matVkEngine/shader/: matVkEngineDescriptorPool.cpp  matVkEngineDescriptorPool.h  matVkEngineDescriptorSet.cpp  matVkEngineDescriptorSet.h  matVkEngineDescriptorSetLayout.cpp  matVkEngineDescriptorSetLayout.h  matVkEngineShaderModule.cpp  matVkEngineShaderModule.h
matVkEngine/matVkEngineDemo/: imgui.ini  main.cpp  matVkEngineDemo.vcxproj  matVkEngineDemo.vcxproj.filters
matVkEngine/matVkEngineDemo/app/: DemoApp.cpp  DemoApp.h
matVkEngine/matVkEngineDemo/editor/: FuzzySearch.h  GraphCanvas.cpp  GraphCanvas.h  NodeRegistry.cpp  NodeRegistry.h  NodeSearchPopup.cpp  NodeSearchPopup.h  RenderGraphEditor.cpp  RenderGraphEditor.h
matVkEngine/matVkEngineDemo/graph/: DefaultDeferredScene.cpp  DefaultDeferredScene.h  GraphDocument.cpp  GraphDocument.h  GraphSerializer.cpp  GraphSerializer.h  GraphTemplates.cpp  GraphTemplates.h  GraphTypes.cpp  GraphTypes.h  GraphValidator.cpp  GraphValidator.h
matVkEngine/matVkEngineDemo/graphs/: default.graph.json  deferred_multi_pass.graph.json  forward.graph.json
src/: main.cpp
tools/: CmakeLists.txt
tools/VulkanAPI/: VulkanAPI.cpp  VulkanAPI.h
vkEngine/: CMakeLists.txt  vkEngine.sln
vkEngine/Dependence/lib/Debug/: glfw.lib  volk.lib  zlibstaticd.lib
vkEngine/Dependence/lib/Release/: glfw.lib  volk.lib  zlibstatic.lib
vkEngine/Dependence/shader/: OpaqueShader.frag  OpaqueShader.vert  quad.frag  quad.vert
vkEngine/src/common/: vkEngineHelp.h
vkEngine/src/config/: vkEngineConfig.h
vkEngine/src/core/: vkEngine.cpp  vkEngine.h  vkEngineContext.cpp  vkEngineContext.h
vkEngine/src/device/: vkEngineCommandPool.cpp  vkEngineCommandPool.h  vkEngineLogicalDevice.cpp  vkEngineLogicalDevice.h  vkEnginePhysicalDevice.cpp  vkEnginePhysicalDevice.h
vkEngine/src/resource/: vkEngineBuffer.cpp  vkEngineBuffer.h  vkEngineImage.cpp  vkEngineImage.h  vkEngineTexture.cpp  vkEngineTexture.h
vkEngine/src/rt/: vkEngineAccelerationStructure.cpp  vkEngineAccelerationStructure.h  vkEngineRTDescriptor.cpp  vkEngineRTDescriptor.h  vkEngineRTHelp.h  vkEngineRayTracingPipeline.cpp  vkEngineRayTracingPipeline.h
vkEngine/vkEngine/: Actor.cpp  Actor.h  Camera.cpp  Camera.h  Loader.cpp  Loader.h  Render.cpp  Render.h  Render_Opaque.cpp  Render_Opaque.h  vkEngine.cpp  vkEngine.h  vkEngine.vcxproj  vkEngine.vcxproj.filters  vkEngineAccelerationStructure.cpp  vkEngineAccelerationStructure.h  vkEngineBuffer.cpp  vkEngineBuffer.h  vkEngineCommandPool.cpp  vkEngineCommandPool.h  vkEngineHelp.h  vkEngineImage.cpp  vkEngineImage.h  vkEngineLogicalDevice.cpp  vkEngineLogicalDevice.h  vkEnginePhysicalDevice.cpp  vkEnginePhysicalDevice.h  vkEngineRTDescriptor.h  vkEngineRayTracingPipeline.cpp  vkEngineRayTracingPipeline.h  vkEngineSwapChain.cpp  vkEngineSwapChain.h  vkEngineTexture.cpp  vkEngineTexture.h  vkEngine_CommandPoolHelp.cpp  vkEngine_InstanceHelp.cpp  vkEngine_LogicalDeviceHelp.cpp  vkEngine_OpaqueRenderPassHelp.cpp  vkEngine_PhysicalDeviceHelp.cpp  vkEngine_ShaderHelp.cpp  (+1 more)
vkEngine/vkEngine/Core/: Context.cpp  Context.h  Device.cpp  Device.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h
vkEngine/vkEngine/Pipeline/: Framebuffer.cpp  Framebuffer.h  PipelineCache.cpp  PipelineCache.h  RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  ShaderModule.cpp  ShaderModule.h
vkEngine/vkEngine/RT/: vkEngineAccelerationStructure.cpp  vkEngineAccelerationStructure.h  vkEngineRTDescriptor.cpp  vkEngineRTDescriptor.h  vkEngineRTHelp.h  vkEngineRayTracingPipeline.cpp  vkEngineRayTracingPipeline.h
vkEngine/vkEngine/Render/: Render.cpp  Render.h
vkEngine/vkEngine/Resource/: CommandPool.cpp  CommandPool.h  DataBuffer.cpp  DataBuffer.h  Image2D.cpp  Image2D.h
vkEngine/vkEngine/Swapchain/: Swapchain.cpp  Swapchain.h  SwapchainImageViews.cpp  SwapchainImageViews.h
vkEngine/vkEngineDemo/: main.cpp  vkEngineDemo.vcxproj
vkEngineDemo/: CMakeLists.txt  main.cpp
vkEngineDemo/shaders/: README.md  closesthit.rchit  compile.bat  compile.ps1  compile.sh  conductorMaterial.glsl  dielectricMaterial.glsl  diffuseMaterial.glsl  envMaterial.glsl  miss.rmiss  pathtrace.glsl  plasticMaterial.glsl  raygen.rgen  roughConductorMaterial.glsl  roughPlasticMaterial.glsl  traceGlobal.glsl
vkRender/: CmakeLists.txt  CommandPool.cpp  CommandPool.h  Context.cpp  Context.h  FrameGraph.cpp  FrameGraph.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  VertexBuffer.cpp  VertexBuffer.h  vkContext.cpp  vkContext.h  vkHelper.cpp  vkHelper.h
